html layout of the index file

--- a/index.html
+++ b/index.html
@@ -3,7 +3,75 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta
+      name="description"
+      content="Clarence Kaloti Mabeya -Financal Analyst and Tech Explorer Portfolio"
+    />
+    <meta
+      name="keywords"
+      content="Portfolio, financial analyst, ethical hacker, web developer"
+    />
+    <meta name="author" content="Clarence Kaloti Mabeya" />
+    <title>Clarence Kaloti Portfolio</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&family=Inter:wght@300;400;500;600;700&display=swap"
+    />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <div>
+          <a href="index.html">Clarence.</a>
+        </div>
+        <div>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="certificates.html">Certificates</a></li>
+            <li><a href="languages.html">Languages</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <main>
+      <section>
+        <div>
+          <h1>Clarence Mabeya</h1>
+          <p>clarence_mabeya@Portfolio:~$ whoami</p>
+          <p>&gt; Clarence Kaloti Mabeya...</p>
+          <pre>
+                    &gt; Financial Analyst and Tech Explorer
+                    &gt; Ethical Hacker in Training
+                    &gt; I break to learn...I learn to build
+                    &gt; Always hacking...Always learning
+                </pre
+          >
+        </div>
+        <section>
+          <a href="">Download CV</a>
+          <div>
+            <a href="#">linkedln</a>
+            <a href="#">github</a>
+            <a href="">whatsapp</a>
+          </div>
+        </section>
+      </section>
+      <aside>
+        <div>
+          <div>
+            <img
+              src="Images/profile1.png"
+              alt="Clarence Mabeya - professional headshot photograph"
+            />
+          </div>
+        </div>
+      </aside>
+    </main>
+    <footer>
+      <p>&copy; 2025 Clarence Kaloti Mabeya. All rights reserved</p>
+    </footer>
+  </body>
 </html>
