layout of our contact page

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,154 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta
+      name="description"
+      content="Contact Clarence Kaloti Mabeya - Financial Analyst and Tech Explorer"
+    />
+    <title>Contact Clarence Kaloti Portfolio</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&family=Inter:wght@300;400;500;600;700&display=swap"
+    />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <div>
+          <a href="index.html">Clarence.</a>
+        </div>
+        <div>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="project.html">Projects</a></li>
+            <li><a href="certificates.html">Certificates</a></li>
+            <li><a href="languages.html">Languages</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <main>
+      <section>
+        <h1>clarence_mabeya@Portfolio:~$ ./connect.sh</h1>
+        <p>Let's build something amazing together</p>
+      </section>
+      <div>
+        <section>
+          <h2>Get in Touch</h2>
+          <div>
+            <article>
+              <div>
+                <h3>Email</h3>
+                <p>professional inquiries and collaborations</p>
+                <a href="mailto:cmabeya3@gmail.com">cmabeya3@gmail.com</a>
+              </div>
+            </article>
+            <article>
+              <div>
+                <h3>Whatsapp</h3>
+                <p>Quick messages and urgent communications</p>
+                <a href="">+254 758 523 133</a>
+              </div>
+            </article>
+            <article>
+              <div>
+                <h3>Linkedln</h3>
+                <p>Professional networking and career changing opportunities</p>
+                <a href="#">linkedln.com/in/clarencekaloti</a>
+              </div>
+            </article>
+            <article>
+              <div>
+                <h3>Github</h3>
+                <p>Code collaborate and open source projects</p>
+                <a href="#">github.com/clarencz</a>
+              </div>
+            </article>
+          </div>
+          <div>
+            <h3>Location</h3>
+            <p>Nairobi,Kenya</p>
+            <p>East Africa Time(EAT) - UTC+3</p>
+          </div>
+        </section>
+        <section>
+          <h2>Send message</h2>
+          <form action="#" method="post">
+            <div>
+              <label for="name">Name</label><input id="name" type="text" />
+            </div>
+            <div>
+              <label for="email">Email</label><input id="email" type="text" />
+            </div>
+            <div>
+              <label for="subject">Subject</label>
+              <select name="subject" id="subject">
+                <option value="">Select a subject</option>
+                <option value="collaboration">Project Collaboration</option>
+                <option value="job-opportunity">Job Opportunity</option>
+                <option value="consulting">Consulting</option>
+                <option value="speaking">Speaking Engagement</option>
+                <option value="other">Other</option>
+              </select>
+            </div>
+            <div>
+              <label for="message">Message</label
+              ><textarea
+                name="message"
+                id="message"
+                placeholder="Tell me about your project, opportunity, or how i can help..."
+              ></textarea>
+            </div>
+            <div>
+              <label
+                ><input type="checkbox" id="privacy" />I agree to the
+                <a href="#">privacy policy</a> and consent to data
+                processing</label
+              >
+            </div>
+            <button type="submit">Send Message</button>
+          </form>
+          <div>
+            <p>
+              <strong>Note:</strong>There is no backend service at the moment so
+              messages can not be sent
+            </p>
+          </div>
+        </section>
+      </div>
+      <section>
+        <h2>Availability & Response Time</h2>
+        <div>
+          <div>
+            <h3>Response Time</h3>
+            <p>
+              I typically respond to emails within 24-48hrs during business
+              days. For urgent matter, please use Whatsapp for faster
+              communication.
+            </p>
+          </div>
+          <div>
+            <h3>Working Hours:</h3>
+            <p>
+              Monday -Friday: 5:00AM -6:00PM (East) <br />
+              Saturday: 8:00AM - 5:00PM (EAT)<br />
+              Sunday: Available for urgent matters only
+            </p>
+          </div>
+          <div>
+            <h3>Project Availability</h3>
+            <p>
+              Currently accepting new project and collaborations. O pen to both
+              short-term consulting and long-term partnerships
+            </p>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <p>&copy; 2025 Clarence Kaloti Mabeya.All rights reserved</p>
+    </footer>
+  </body>
 </html>
