--- a/project.html
+++ b/project.html
@@ -3,7 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta
+      name="description"
+      content="Projects Clarence Kaloti Mabeya - Financial Analyst and Tech Explorer"
+    />
+    <title>Projects Clarence Kaloti Portfolio</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&family=Inter:wght@300;400;500;600;700&display=swap"
+    />
   </head>
   <body></body>
 </html>
