layout of our programming proficiency page

--- a/languages.html
+++ b/languages.html
@@ -3,7 +3,208 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta
+      name="description"
+      content="Programming Languages and Skills - Clarence Kaloti Mabeya"
+    />
+    <title>Programming languages Clarence Mabeya Portfolio</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&family=Inter:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <div>
+          <a href="index.html">Clarence.</a>
+        </div>
+        <div>
+          <ul>
+            <li><a href="index.html"></a>Home</li>
+            <li><a href="projects.html"></a>Projects</li>
+            <li><a href="certificates.html">Certificates</a></li>
+            <li><a href="languages.html">Languages</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <main>
+      <section>
+        <h1>clarence_mabeya@Portfolio:~$ grep -r "skills ./</h1>
+        <p>Programming languages and technical skills</p>
+      </section>
+      <div>
+        <section>
+          <h2>Programming Languages</h2>
+          <div>
+            <article>
+              <header>
+                <h3>Python Expert</h3>
+              </header>
+              <p>
+                Advanced proficiency in python for data analysis, web
+                development, automation, and cybersecurity tools. Extensive
+                experience with pandas, numpy, flask and security libraries
+              </p>
+              <div>
+                <h3>Data Analysis</h3>
+                <h3>Web Development</h3>
+                <h3>Automation</h3>
+                <h3>Security</h3>
+              </div>
+            </article>
+            <article>
+              <header>
+                <h3>Javascript Advanced</h3>
+              </header>
+              <p>
+                Strong Javascript skills for frontend and backend development.
+                Experience with modern ES6+ features, DOM manipulation, and
+                Asynchronous p rogramming
+              </p>
+              <div>
+                <h3>Frontend</h3>
+                <h3>Backend</h3>
+                <h3>ES6+</h3>
+                <h3>API</h3>
+              </div>
+            </article>
+            <article>
+              <header>
+                <h3>SQL Advanced</h3>
+              </header>
+              <p>
+                Proficient in sql for database design, complex queries, data
+                analysis, and financial reporting. Experience with PostgreSQL,
+                MySQL, AND SQLite
+              </p>
+              <div>
+                <h3>Database Design</h3>
+                <h3>Data Analysis</h3>
+                <h3>Reporting</h3>
+                <h3>Optimization</h3>
+              </div>
+            </article>
+            <article>
+              <header>R Intermediate</header>
+              <p>
+                Statistical computing and data visualization using R. Experience
+                with financial modelling, risk analysis, and statistical testing
+                for investment research
+              </p>
+              <div>
+                <h3>Statistics</h3>
+                <h3>Financial modelling</h3>
+                <h3>Visualization</h3>
+                <h3>Research</h3>
+              </div>
+            </article>
+            <article>
+              <header>Bash/Shell Advanced</header>
+              <p>
+                Command-line proficiency for system administration, automation,
+                and cybersecurity tasks. Experience with linux environments and
+                security tool intergration
+              </p>
+              <div>
+                <h3>Automation</h3>
+                <h3>System Admin</h3>
+                <h3>Security</h3>
+                <h3>Linux</h3>
+              </div>
+            </article>
+            <article>
+              <header>HTML/CSS Advanced</header>
+              <p>
+                Modern web development with semantic HTML5 and advanced CSS3.
+                Experience with responsive design, animations, and accessibility
+                best practices
+              </p>
+              <div>
+                <h3>Responsive Design</h3>
+                <h3>Accessibility</h3>
+                <h3>Animations</h3>
+                <h3>Modern CSS3</h3>
+              </div>
+            </article>
+          </div>
+        </section>
+        <section>
+          <h2>Spoken Languages</h2>
+          <div>
+            <article>
+              <header>
+                <h3>English Native</h3>
+              </header>
+              <p>
+                Native English speaker with excellent written and verbal
+                communication skills. Professional proficiency in technical
+                writing and presentation
+              </p>
+            </article>
+            <article>
+              <header>
+                <h3>Swahili</h3>
+              </header>
+              <p>
+                Native Swahili speaker with deep cultural understanding. Ability
+                to communicate complex technical concepts in local context
+              </p>
+            </article>
+          </div>
+        </section>
+        <section>
+          <h2>Tools & Frameworks</h2>
+          <div>
+            <div>
+              <h3>Development Tools</h3>
+              <div>
+                <h3>Git & Github</h3>
+                <h3>VS Code</h3>
+                <h3>Docker</h3>
+                <h3>Postman</h3>
+                <h3>Jupyter Notebooks</h3>
+              </div>
+            </div>
+
+            <div>
+              <h3>Security Tools</h3>
+              <div>
+                <h3>Nmap</h3>
+                <h3>Wireshark</h3>
+                <h3>Metasploit</h3>
+                <h3>Kali Linux</h3>
+                <h3>Burp Suite</h3>
+              </div>
+            </div>
+
+            <div>
+              <h3>Financial Tools</h3>
+              <div>
+                <h3>Bloomberg Teriminal</h3>
+                <h3>Excel VBA</h3>
+                <h3>Tableau</h3>
+                <h3>Power BI</h3>
+              </div>
+            </div>
+
+            <div>
+              <h3>Web Frameworks</h3>
+              <div>
+                <h3>Flask</h3>
+                <h3>Node.js</h3>
+              </div>
+            </div>
+          </div>
+        </section>
+      </div>
+    </main>
+    <footer>
+      <p>&copy; 2025 Clarence Kaloti Mabeya. All rights reserved</p>
+    </footer>
+  </body>
 </html>
