project page layout

--- a/project.html
+++ b/project.html
@@ -14,5 +14,121 @@
       href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&family=Inter:wght@300;400;500;600;700&display=swap"
     />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <div>
+          <a href="index.html">Clarence.</a>
+        </div>
+      </nav>
+      <div>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="project.html"></a>Projects</li>
+          <li><a href="certificates.html">Certificates</a></li>
+          <li><a href="languages.html"></a>Languages</li>
+          <li><a href="contact.html"></a>Contact</li>
+        </ul>
+      </div>
+    </header>
+    <main>
+      <section>
+        <h1>clarence_mabeya@Portfolio:~$ ls projects/</h1>
+        <p>Exploring the intersection of Finance and Technology</p>
+      </section>
+      <section>
+        <article>
+          <header>
+            <h2>Financial Dashboard Analytics</h2>
+            <div>
+              <h2>Finance</h2>
+              <h2>node.js</h2>
+              <h2>Python</h2>
+              <h2>Javascript</h2>
+              <h2>React</h2>
+            </div>
+          </header>
+          <div>
+            <p>
+              Interactive dashboard for realtime market analysis and portfolio
+              tracking. Features automated data collection, risk assessment
+              algorithms, and predictive modelling for investment decisions
+            </p>
+            <div>
+              <h3>Key Features</h3>
+              <ul>
+                <li>Realtime stock price monitoring</li>
+                <li>Portfolio performance analytics</li>
+                <li>Risk assessment algorithms</li>
+                <li>Automated reporting systems</li>
+              </ul>
+            </div>
+          </div>
+          <footer>
+            <a href="#">View Project</a>
+            <a href="">Source Code</a>
+          </footer>
+        </article>
+        <article>
+          <header>
+            <h2>Cybersecurity Audit Tool</h2>
+            <div>
+              <h2>Python</h2>
+              <h2>Nmap</h2>
+              <h2>Security</h2>
+              <h2>Automation</h2>
+            </div>
+          </header>
+          <div>
+            <p>
+              Automation network security assessment tool for identifying
+              vulnerabilities and generating security reports. Built for ethical
+              hacking and penetration testing scenarios
+            </p>
+            <div>
+              <h3>Key Features:</h3>
+              <ul>
+                <li>Network vulnerability scanning</li>
+                <li>Automated report generation</li>
+                <li>Custom security rule engine</li>
+                <li>Integration with security frameworks</li>
+              </ul>
+            </div>
+          </div>
+          <footer>
+            <a href="#">View Project</a>
+            <a href="#">Source Code</a>
+          </footer>
+        </article>
+        <article>
+          <header>
+            <h2>Portfolio Project</h2>
+            <div>
+              <h2>HTML</h2>
+              <h2>CSS</h2>
+              <h2>JavaScript</h2>
+            </div>
+          </header>
+          <div>
+            <p>
+              Personal portfolio project that is part of a hackathon by PLP
+              Academy. A challenge that enabled me to actually build a portfolio
+              website I have been stalling to so for quite a while
+            </p>
+            <div>
+              <h3>Key Features:</h3>
+              <ul>
+                <li>Project</li>
+                <li>certificates</li>
+                <li>contact</li>
+              </ul>
+            </div>
+          </div>
+        </article>
+      </section>
+    </main>
+    <footer>
+      <p>&&copy; 2025 Clarence Kaloti Mabeya. All rights reserved</p>
+    </footer>
+  </body>
 </html>
