certificates layout page

--- a/certificates.html
+++ b/certificates.html
@@ -3,7 +3,168 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta
+      name="description"
+      content="certificates and qualifications Clarence Mabeya Portfolio"
+    />
+    <title>Certificates Clarence Mabeya</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&family=Inter:wght@300;400;500;600;700&display=swap"
+    />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <div><a href="index.html">Clarence.</a></div>
+        <div>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="project.html">Projects</a></li>
+            <li><a href="certificates.html">Certificates</a></li>
+            <li><a href="languages.html">Languages</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <main>
+      <section>
+        <h1>clarence_mabeya@Portfolio:~$ cat certificates.txt</h1>
+        <p>Professional Certificates and Achievements</p>
+      </section>
+      <section>
+        <article>
+          <header>
+            <h2>Bachelor of Commerce(Finance)</h2>
+            <p>Technical University of kenya</p>
+          </header>
+          <div>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Molestias eos a veritatis sapiente in repellat, repudiandae, amet
+              blanditiis dolorum nam quasi. Vel deserunt nihil, illo praesentium
+              esse perferendis officia maxime.
+            </p>
+            <div>
+              <div>
+                <h3>Issue date:</h3>
+                <h3>date</h3>
+              </div>
+              <div>
+                <h3>Status:</h3>
+                <h3>Active</h3>
+              </div>
+            </div>
+          </div>
+          <footer><a href="#">Verify Certificate</a></footer>
+        </article>
+        <article>
+          <header>
+            <h2>Bachelor of Commerce(Finance)</h2>
+            <p>Technical University of kenya</p>
+          </header>
+          <div>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Molestias eos a veritatis sapiente in repellat, repudiandae, amet
+              blanditiis dolorum nam quasi. Vel deserunt nihil, illo praesentium
+              esse perferendis officia maxime.
+            </p>
+            <div>
+              <div>
+                <h3>Issue date:</h3>
+                <h3>date</h3>
+              </div>
+              <div>
+                <h3>Status:</h3>
+                <h3>Active</h3>
+              </div>
+            </div>
+          </div>
+          <footer><a href="#">Verify Certificate</a></footer>
+        </article>
+        <article>
+          <header>
+            <h2>Bachelor of Commerce(Finance)</h2>
+            <p>Technical University of kenya</p>
+          </header>
+          <div>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Molestias eos a veritatis sapiente in repellat, repudiandae, amet
+              blanditiis dolorum nam quasi. Vel deserunt nihil, illo praesentium
+              esse perferendis officia maxime.
+            </p>
+            <div>
+              <div>
+                <h3>Issue date:</h3>
+                <h3>date</h3>
+              </div>
+              <div>
+                <h3>Status:</h3>
+                <h3>Active</h3>
+              </div>
+            </div>
+          </div>
+          <footer><a href="#">Verify Certificate</a></footer>
+        </article>
+        <article>
+          <header>
+            <h2>Bachelor of Commerce(Finance)</h2>
+            <p>Technical University of kenya</p>
+          </header>
+          <div>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Molestias eos a veritatis sapiente in repellat, repudiandae, amet
+              blanditiis dolorum nam quasi. Vel deserunt nihil, illo praesentium
+              esse perferendis officia maxime.
+            </p>
+            <div>
+              <div>
+                <h3>Issue date:</h3>
+                <h3>date</h3>
+              </div>
+              <div>
+                <h3>Status:</h3>
+                <h3>Active</h3>
+              </div>
+            </div>
+          </div>
+          <footer><a href="#">Verify Certificate</a></footer>
+        </article>
+        <article>
+          <header>
+            <h2>Bachelor of Commerce(Finance)</h2>
+            <p>Technical University of kenya</p>
+          </header>
+          <div>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Molestias eos a veritatis sapiente in repellat, repudiandae, amet
+              blanditiis dolorum nam quasi. Vel deserunt nihil, illo praesentium
+              esse perferendis officia maxime.
+            </p>
+            <div>
+              <div>
+                <h3>Issue date:</h3>
+                <h3>date</h3>
+              </div>
+              <div>
+                <h3>Status:</h3>
+                <h3>Active</h3>
+              </div>
+            </div>
+          </div>
+          <footer><a href="#">Verify Certificate</a></footer>
+        </article>
+      </section>
+    </main>
+
+    <footer>
+      <p>&copy; 2025 Clarence Kaloti Mabeya. All rights reserved</p>
+    </footer>
+  </body>
 </html>
