fixed nav links

--- a/project.html
+++ b/project.html
@@ -24,10 +24,10 @@
       <div>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="project.html"></a>Projects</li>
+          <li><a href="project.html">Projects</a></li>
           <li><a href="certificates.html">Certificates</a></li>
-          <li><a href="languages.html"></a>Languages</li>
-          <li><a href="contact.html"></a>Contact</li>
+          <li><a href="languages.html">Languages</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
     </header>
