--- a/languages.html
+++ b/languages.html
@@ -23,8 +23,8 @@
         </div>
         <div>
           <ul>
-            <li><a href="index.html"></a>Home</li>
-            <li><a href="projects.html"></a>Projects</li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="projects.html">Projects</a></li>
             <li><a href="certificates.html">Certificates</a></li>
             <li><a href="languages.html">Languages</a></li>
             <li><a href="contact.html">Contact</a></li>
